--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@react-three/drei": "^9.96.5",
+    "@react-three/drei": "^9.101.0",
     "@react-three/fiber": "^8.15.15",
     "@types/three": "^0.160.0",
+    "@use-gesture/react": "^10.3.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
